Fixed log overflow bug during deploys

--- a/src/color-schemes.scss
+++ b/src/color-schemes.scss
@@ -24,7 +24,7 @@
 
 /**Colors for devices in dark mode*/
 
-@include color-mode(dark) {
+[data-bs-theme=dark] {
   --bs-link-color-rgb: 13, 202, 240 !important;
   --bs-link-hover-color-rgb: 61, 213, 243 !important;
 }
@@ -54,10 +54,10 @@
 }
 
 /**Colors for devices in light mode*/
-@include color-mode(light) {
+[data-bs-theme=light] {
 
   .muted {
-    color: --bs-secondary-color !important;
+    color: var(--bs-secondary-color) !important;
   }
 
   .color-scheme-main {
